--- a/app/src/main/res/layout/fragment_get_transaction_only_paid.xml
+++ b/app/src/main/res/layout/fragment_get_transaction_only_paid.xml
@@ -1,93 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/swipe_refresh"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/colorWhite"
-    tools:context=".fragments.GetTransacrionOnlyPaidFragment">
+    android:layout_height="match_parent">
 
-
-    <androidx.core.widget.NestedScrollView
-        android:id="@+id/nsv_scroll"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/tb_tool_bar_history"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/colorOrange"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toTopOf="@id/rv_done"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
                 android:id="@+id/tb_tool_bar_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:weightSum="2"
-                app:layout_constraintBottom_toTopOf="@id/rv_done"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
+                android:layout_margin="@dimen/margin_10"
+                android:orientation="horizontal"
+                android:weightSum="6"
                 app:layout_constraintTop_toTopOf="parent">
 
+                <TextView
+                    android:id="@+id/tv_show_date"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:layout_weight="3"
+                    android:text="@string/paid"
+                    android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/tv_paid_toolbar"
-                    android:layout_width="100dp"
+                    android:id="@+id/tv_show_money"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:layout_weight="1"
-                    android:text="@string/done_list"
-                    android:textAlignment="viewEnd"
-                    android:textColor="@color/colorWhite" />
-
-                <TextView
-                    android:id="@+id/tv_amount_toolbar"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="20dp"
-                    android:layout_weight="1"
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:layout_weight="3"
                     android:text="@string/amd"
-                    android:textAlignment="viewEnd"
-                    android:textColor="@color/colorWhite" />
+                    android:textAlignment="center"
+                    android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/tv_icon_toolbar"
+                <ImageView
+                    android:id="@+id/iv_icon"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:layout_margin="20dp" />
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:src="@drawable/ic_baseline_check_24" />
+
 
             </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_done"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:nestedScrollingEnabled="false"
-                app:layout_constraintTop_toBottomOf="@id/tb_tool_bar_container"
-                tools:listitem="@layout/history_item"
-                tools:targetApi="lollipop" />
-
-            <ProgressBar
-                android:id="@+id/progress_payed_list"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/rv_done"
-                tools:ignore="NestedWeights" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_done"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/cv_container" />
 
 
-    </androidx.core.widget.NestedScrollView>
-
-
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
