--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,113 +1,148 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.MainFragment">
 
-<!--   /// <include-->
-<!--        android:id="@+id/tb_tool_bar"-->
-<!--        layout="@layout/tool_bar"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent" />-->
-
-    <ImageView
-        android:id="@+id/iv_logo"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="100dp"
-        app:layout_constraintBottom_toTopOf="@id/et_money"
-        app:layout_constraintLeft_toLeftOf="@id/tb_tool_bar"
-        app:layout_constraintRight_toRightOf="@id/tb_tool_bar"
-        app:layout_constraintTop_toBottomOf="@id/tb_tool_bar" />
-
-    <TextView
-        android:id="@+id/tv_info_h_v_h_h"
-        android:layout_width="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/iv_logo"
-        app:layout_constraintLeft_toLeftOf="@id/iv_logo"
-        app:layout_constraintRight_toRightOf="@id/iv_logo"
-        android:layout_marginTop="10dp"
-        android:textStyle="bold"
-        android:textSize="30sp"
-        android:layout_height="wrap_content"/>
-
-    <EditText
-        android:id="@+id/et_money"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="32dp"
-        android:hint="@string/amount"
-        android:inputType="number"
-        android:maxLength="10"
-        android:shadowColor="@color/colorPrimaryDark"
-        android:textColorHighlight="@color/colorPrimaryDark"
-        android:textColorHint="@color/colorHint"
-        android:textColorLink="@color/colorPrimaryDark"
-        app:layout_constraintBottom_toTopOf="@id/et_comment"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_logo" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="3">
 
-    <EditText
-        android:id="@+id/et_comment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
-        android:hint="@string/comment"
-        android:inputType="text"
-        android:textColorHint="@color/colorHint"
-        app:layout_constraintBottom_toTopOf="@id/btn_pay"
-        app:layout_constraintLeft_toLeftOf="@id/et_money"
-        app:layout_constraintRight_toRightOf="@id/et_money"
-        app:layout_constraintTop_toBottomOf="@id/et_money" />
 
-    <Button
-        android:id="@+id/btn_pay"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="200dp"
-        android:background="@drawable/button_orange_shape"
-        android:padding="10dp"
-        android:text="@string/receive_the_payment"
-        android:textColor="@color/colorPrimaryDark"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@id/et_comment"
-        app:layout_constraintRight_toRightOf="@id/et_comment"
-        app:layout_constraintTop_toBottomOf="@id/et_comment" />
+        <ImageView
+            android:id="@+id/iv_logo"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginStart="@dimen/margin_32"
+            android:layout_marginTop="@dimen/margin_10"
+            android:layout_marginEnd="@dimen/margin_32"
+            android:layout_weight="1"
+            android:src="@drawable/pay_x_logo" />
 
-    <Button
-        android:id="@+id/btn_qr_generate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="200dp"
-        android:background="@drawable/button_orange_shape"
-        android:padding="10dp"
-        android:text="@string/receive_the_payment"
-        android:textColor="@color/colorPrimaryDark"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@id/et_comment"
-        app:layout_constraintRight_toRightOf="@id/et_comment"
-        app:layout_constraintTop_toBottomOf="@id/et_comment" />
 
-    <ProgressBar
-        android:id="@+id/pb_pay_progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        app:layout_constraintLeft_toLeftOf="@id/btn_pay"
-        app:layout_constraintRight_toRightOf="@id/btn_pay"
-        app:layout_constraintTop_toBottomOf="@id/btn_pay" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:layout_height="0dp">
+
+            <TextView
+                android:id="@+id/tv_info_h_v_h_h"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/et_money"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_32"
+                android:layout_marginEnd="@dimen/margin_32"
+                android:hint="@string/amount"
+                android:inputType="number"
+                android:maxLength="10" />
+
+            <EditText
+                android:id="@+id/et_comment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/margin_32"
+                android:layout_marginTop="@dimen/margin_10"
+                android:layout_marginEnd="@dimen/margin_32"
+                android:hint="@string/comment"
+                android:inputType="text" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.5"
+            android:layout_margin="@dimen/margin_32"
+            android:orientation="horizontal"
+            android:weightSum="2"
+            tools:ignore="NestedWeights">
+
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv_generate_qr"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:elevation="@dimen/margin_10"
+                app:cardCornerRadius="12dp"
+                tools:ignore="NestedWeights">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/margin_10"
+                        android:gravity="top"
+                        android:maxLines="1"
+                        android:text="@string/generate_qr"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/qr" />
+
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv_share"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:elevation="@dimen/margin_10"
+                app:cardCornerRadius="12dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginTop="@dimen/margin_10"
+                        android:gravity="center_horizontal"
+                        android:maxLines="1"
+                        android:text="@string/share"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/ic_baseline_share_24" />
+
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+
+        </LinearLayout>
+    </LinearLayout>
+
+</LinearLayout>
