--- a/app/src/main/res/layout/fragment_paid_history_detail.xml
+++ b/app/src/main/res/layout/fragment_paid_history_detail.xml
@@ -6,6 +6,9 @@
     android:orientation="vertical"
     tools:context=".fragments.PaidHistoryDetailFragment">
 
+
+
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,6 +18,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_10"
             android:orientation="horizontal"
             android:weightSum="2">
 
@@ -43,6 +47,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_10"
             android:orientation="horizontal"
             android:weightSum="2">
 
@@ -71,6 +76,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_10"
             android:orientation="horizontal"
             android:weightSum="2">
 
@@ -100,6 +106,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_margin="@dimen/margin_10"
             android:weightSum="2">
 
             <TextView
@@ -126,6 +133,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_10"
             android:orientation="horizontal"
             android:weightSum="2">
 
@@ -154,6 +162,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_10"
             android:orientation="horizontal"
             android:weightSum="2">
 
@@ -182,6 +191,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_10"
             android:orientation="horizontal"
             android:weightSum="2">
 
@@ -210,6 +220,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_10"
             android:orientation="horizontal"
             android:weightSum="2">
 
@@ -238,6 +249,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/margin_10"
             android:orientation="horizontal"
             android:weightSum="2">
 
@@ -254,6 +266,7 @@
                 android:layout_weight="1" />
 
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
