--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,6 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
+    <item android:title="@string/app_name">
+        <menu>
+            <item
+                android:id="@+id/nav_merchant"
+                android:title="@string/main_page" />
+        </menu>
+    </item>
+
     <item android:title="@string/transactions">
         <menu>
             <item
